--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+			<!-- Dependency for JUnit -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.12</version>
+				<!--<scope>test</scope>-->
+			</dependency>
+			<!-- Dependency for Mockito -->
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>1.10.19</version>
+				<!--<scope>test</scope>-->
+			</dependency>
+
 	</dependencies>
 
 	<build>
